fix z-index

--- a/styles/components/Nav/SelectorFilter.module.sass
+++ b/styles/components/Nav/SelectorFilter.module.sass
@@ -2,7 +2,7 @@
     font-family: Lato,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif
     display: flex
     box-shadow: 4px 7px 32px rgba(30,30,30,.31)
-    z-index: 2
+    z-index: 11
     width: 100%
     position: absolute
 
